# dft_tools

./: .clang-tidy  .dockerignore  .gitignore  .travis.yml  AUTHORS.txt  CMakeLists.txt  Ce-gamma_DOS.py problem  ChangeLog.md  Dockerfile  Help  Jenkinsfile  LICENSE.txt  README.md  README.txt  dft_dmft_cthyb.py  dfttools.install  lda_dmft_cthyb.py  requirements.txt  wien2triqs
c++/app4triqs/: CMakeLists.txt  app4triqs.cpp  app4triqs.hpp  toto.cpp  toto.hpp
c++/triqs_dft_tools/: CMakeLists.txt  triqs_dft_tools.hpp
doc/: CMakeLists.txt  Ce-HI.rst  Ce-gamma.indmftpr  Ce-gamma.py  Ce-gamma.struct  Ce-gamma_DOS.py  Ce-gamma_DOS_script.rst  Ce-gamma_script.rst  ChangeLog.md  DFTDMFTmain.rst  LDADMFTmain.rst  Transport.rst  about.rst  advanced.rst  analysis.rst  changelog.rst  conf.py.in  contents.rst  documentation.rst  fleur.rst  function_template.py  h5structure.rst  index.rst  install.rst  interface.rst  issues.rst  selfcons.rst  tutorials.rst
doc/_python_api/: triqs_dft_tools.block_structure.BlockStructure.__init__.rst  triqs_dft_tools.block_structure.BlockStructure.adapt_deg_shells.rst  triqs_dft_tools.block_structure.BlockStructure.approximate_as_diagonal.rst  triqs_dft_tools.block_structure.BlockStructure.check_gf.rst  triqs_dft_tools.block_structure.BlockStructure.check_matrix.rst  triqs_dft_tools.block_structure.BlockStructure.convert_gf.rst  triqs_dft_tools.block_structure.BlockStructure.convert_matrix.rst  triqs_dft_tools.block_structure.BlockStructure.convert_operator.rst  triqs_dft_tools.block_structure.BlockStructure.copy.rst  triqs_dft_tools.block_structure.BlockStructure.create_gf.rst  triqs_dft_tools.block_structure.BlockStructure.create_matrix.rst  triqs_dft_tools.block_structure.BlockStructure.effective_transformation_solver.rst  triqs_dft_tools.block_structure.BlockStructure.effective_transformation_sumk.rst  triqs_dft_tools.block_structure.BlockStructure.full_structure.rst  triqs_dft_tools.block_structure.BlockStructure.gf_struct_solver_dict.rst  triqs_dft_tools.block_structure.BlockStructure.gf_struct_solver_list.rst  triqs_dft_tools.block_structure.BlockStructure.gf_struct_sumk_dict.rst  triqs_dft_tools.block_structure.BlockStructure.gf_struct_sumk_list.rst  triqs_dft_tools.block_structure.BlockStructure.inequiv_to_corr.rst  triqs_dft_tools.block_structure.BlockStructure.map_gf_struct_solver.rst  triqs_dft_tools.block_structure.BlockStructure.pick_gf_struct_solver.rst  triqs_dft_tools.block_structure.BlockStructure.pick_gf_struct_sumk.rst  triqs_dft_tools.block_structure.BlockStructure.rst  triqs_dft_tools.block_structure.BlockStructure.sumk_to_solver_block.rst  triqs_dft_tools.block_structure.rst  triqs_dft_tools.converters.converter_tools.ConverterTools.__init__.rst  triqs_dft_tools.converters.converter_tools.ConverterTools.det_shell_equivalence.rst  triqs_dft_tools.converters.converter_tools.ConverterTools.read_fortran_file.rst  triqs_dft_tools.converters.converter_tools.ConverterTools.repack.rst  triqs_dft_tools.converters.converter_tools.ConverterTools.rst  triqs_dft_tools.converters.converter_tools.rst  triqs_dft_tools.converters.elk.ElkConverter.__init__.rst  triqs_dft_tools.converters.elk.ElkConverter.axangsu2.rst  triqs_dft_tools.converters.elk.ElkConverter.bzfoldout.rst  triqs_dft_tools.converters.elk.ElkConverter.check_dens.rst  triqs_dft_tools.converters.elk.ElkConverter.convert_bands_input.rst  triqs_dft_tools.converters.elk.ElkConverter.convert_contours_input.rst  triqs_dft_tools.converters.elk.ElkConverter.convert_dft_input.rst  triqs_dft_tools.converters.elk.ElkConverter.convert_transport_input.rst  triqs_dft_tools.converters.elk.ElkConverter.det_shell_equivalence.rst  (+312 more)
doc/_templates/: autosummary_class_template.rst  autosummary_module_template.rst  sideb.html
doc/basicnotions/: dft_dmft.rst  first.rst  structure.rst
doc/faqs/: faqs.rst
doc/guide/: BasisRotation.rst  Sr2RuO4.rst  SrVO3.rst  analysis.rst  blockstructure.rst  conv_W90.rst  conv_elk.rst  conv_generalhk.rst  conv_vasp.rst  conv_wien2k.rst  conversion.rst  dftdmft_selfcons.rst  dftdmft_singleshot.rst  full_tutorial.rst  orbital_construction.rst  plovasp.rst  removeorbitals.rst  soc.rst  transport.rst
doc/reference/: U_matrix.rst  block_structure.rst  converters.rst  h5structure.rst  h5structure.rst~  put_Sigma.rst  put_Sigma.rst~  sumk_dft.rst  sumk_dft_tools.rst  sumk_lda.rst  sumk_lda.rst~  symmetry.rst  transbasis.rst
doc/tutorials/: ce-gamma-fscs_wien2k.rst  fese.rst  latio3.rst  nio_csc.rst  sr2mgoso6_nosoc.rst  sr2mgoso6_soc.rst  sr2ruo4_soc.rst  srmno3.rst  srvo3.rst
doc/vasp/: Makefile
fortran/dmftproj/: CMakeLists.txt  density.f  dmftproj.f  modules.f  orthogonal.f  orthogonal_wannier.f  (+13 more)
python/: .extra_functions.py.swp  CMakeLists.txt  SumK_LDA_Transport.py  SumK_LDA_Transport_Wien2k_input.py  TODOFIX  U_matrix.py  __init__.py  block_structure.py  build_sigma_from_txt.py  clear_h5_output.py  clear_lda_output.py  hamiltonians.py  lattice_gf.py  solver_multiband.py  sumk_dft.py  sumk_dft_tools.py  sumk_lda.py  sumk_lda_tools.py  symmetry.py  trans_basis.py  update_archive.py  version.py.in
share/: CMakeLists.txt  app4triqs.modulefile.in  app4triqsvars.sh.in  replace_and_rename.py  replace_and_rename.sh  sitecustomize.py  squash_history.sh  triqs_dft_toolsvars.sh.in
shells/: CMakeLists.txt  plovasp.bash.in  vasp_dmft.bash.in
test/: CMakeLists.txt  SrVO3.h5  SrVO3_Sigma.h5  U_mat.output.h5  U_mat.py  analyse_block_structure_from_gf.py  analyse_block_structure_from_gf.ref.h5  analyse_block_structure_from_gf2.py  analyze_block_structure_from_gf.py  analyze_block_structure_from_gf2.py  basis_transformation.py  blockstructure.in.h5  blockstructure.py  blockstructure.ref.h5  hk_convert.output.h5  hk_convert.py  hk_convert_hamiltonian.hk  sigma_from_file.output.h5  sigma_from_file.py  srvo3_Gloc.output.h5  srvo3_Gloc.py  srvo3_transp.output.h5  srvo3_transp.py  srvo3_transp.ref.h5  sumkdft_basic.output.h5  sumkdft_basic.py  sumklda_basic.output.h5  sumklda_basic.py  test_w90_ef.py  w90_convert.py  wien2k_convert.output.h5  wien2k_convert.py  wien2k_convert.ref.h5
(+720 files in other folders)
